@@ -1,6 +1,8 @@
 Release 1.0 (in development)
 ============================
 
+* Remove the deprecated ``exclude_dirs`` config value.
+
 * #129: Wrap toctrees in a div tag with class ``toctree-wrapper``
   in HTML output.
 
